--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -46,10 +46,10 @@
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <!-- <input placeholder="Intake Phone" id="intakephone" name="intakephone" class="form-control required" ng-minlength="10" ng-maxlength="10" maxlength="10" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$root.intakephone" required="true"> -->
-
-        <input ng-init="" placeholder="eg. (601) 521-1542" id="intakephone" name="intakephone" ng-change="$ctrl.testNum()" class="form-control required" type="text" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14" ng-model="$root.intakephone">
-        <p ng-show="$root.addlistForm.intakephone.$error.pattern || $root.addlistForm.intakephone.$error.minlength || $root.addlistForm.intakephone.$error.maxlength" class="help-block">Invalid US number.</p>
-        <p ng-show="$root.addlistForm.intakephone.$error.required" class="help-block">Required</p>
+        <input placeholder="Intake Phone" id="phone" name="intakephone" class="form-control required" ng-pattern="/^-?[0-9+]*$/" type="text" ng-model="$root.intakephone" required="true">
+        <!-- <input ng-init="" placeholder="eg. (601) 521-1542" id="intakephone" name="intakephone" ng-change="$ctrl.testNum()" class="form-control required" type="text" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14" ng-model="$root.intakephone"> -->
+        <!-- <p ng-show="$root.addlistForm.intakephone.$error.pattern || $root.addlistForm.intakephone.$error.minlength || $root.addlistForm.intakephone.$error.maxlength" class="help-block">Invalid US number.</p> -->
+        <p ng-show="$root.addlistForm.intakephone.$invalid" class="help-block">Invalid phone number</p>
       </div>
     </div>
     <div class="adn-row">
