--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -115,9 +115,10 @@
             <label for="phone"> Phone: </label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.phone" type="text" name="phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14">
-            <p ng-show="$ctrl.accountSetting.phone.$error.pattern || $ctrl.accountSetting.phone.$error.minlength || $ctrl.accountSetting.phone.$error.maxlength" class="help-block">Invalid US number.</p>
-            <!-- <p ng-show="$ctrl.accountSetting.phone.$error.required" class="help-block">Required</p> -->
+            <!-- <input ng-model="$ctrl.phone" type="text" name="phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14"> -->
+            <input ng-model="$ctrl.phone" type="text" name="phone" placeholder="Intake Phone number" ng-pattern="/^-?[0-9+]*$/" number="true" class="form-control required" required="true">
+            <!-- <p ng-show="$ctrl.accountSetting.phone.$error.pattern || $ctrl.accountSetting.phone.$error.minlength || $ctrl.accountSetting.phone.$error.maxlength" class="help-block">Invalid US number.</p> -->
+            <p ng-show="$ctrl.accountSetting.phone.$invalid" class="help-block">Required</p>
           </div>
         </div>
 
@@ -139,7 +140,8 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn adn-btn right" ng-disabled=" $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.first_name.$invalid">Submit</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled=" $ctrl.accountSetting.last_name.$invalid ||
+            $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.phone.$invalid">Submit</button>
             <!-- <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.accountSetting.phone.$invalid || ($ctrl.zipFound === 0) || $ctrl.accountSetting.city.$invalid || $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.first_name.$invalid">Submit</button> -->
           </div>
         </div>
