removed description validation

--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -57,7 +57,7 @@
         <label>Description</label>
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
-        <textarea name="description" ng-model="$root.description" class="form-control required" rows="2" cols="50" placeholder="Brief Overview (Upto 50 words max)" required="true" maxlength="50"></textarea>
+        <textarea name="description" ng-model="$root.description" class="form-control required" rows="2" cols="50" placeholder="Brief Overview (Upto 50 words max)" required="true"></textarea>
         <p ng-show="$root.addlistForm.description.$error.required" class="help-block">Required</p>
       </div>
     </div>
