added slider in treatment center

--- a/app/treatmentCenterDetail/carousel/view.html
+++ b/app/treatmentCenterDetail/carousel/view.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12" ng-show="$ctrl.images.length">
+<div class="col-xs-12 treatmentcenter_image" ng-show="$ctrl.images.length">
   <div class="row">
     <div class="col-sm-12">
       <div uib-carousel active="active" interval="$ctrl.interval" no-wrap="$ctrl.noWrap" class="center-detail-carousel">
