--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -18,7 +18,7 @@
         </div> -->
       </form>
       <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12" ng-init="$ctrl.sideAdvertisement = 0" ng-show="$ctrl.sideAdvertisement !== 1">
-        <div class="side-card ">
+        <div class="side-card add_listing_side_card">
           <card-heading>Advertisements</card-heading>
         </div>
         <div class="banner_adjust">
