--- a/app/myProfile/addTreatmentCenter/view.html
+++ b/app/myProfile/addTreatmentCenter/view.html
@@ -45,16 +45,16 @@
           </div>
         </div>
         <!-- listing type -->
-        <div class="adn-row">
+        <div class="adn-row" ng-if="$ctrl.userType!=='free' || $ctrl.userType===''">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label>Listing Type:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <select ng-model="$ctrl.listing_type" name="listing_type" required="true">
               <option value="">Select Listing</option>
-              <option value="free">Free</option>
-              <option value="paid">Paid</option>
-              <option value="featured">Featured</option>
+              <option value="free" selected>Free</option>
+              <option value="paid">Paid (${{$ctrl.sponsoredPrice}})</option>
+              <option value="featured">Featured (${{$ctrl.featuredPrice}})</option>
             </select>
             <p ng-show="$ctrl.editCenter.listing_type.$invalid">Required</p>
           </div>
@@ -154,7 +154,7 @@
             <label>Description:</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <textarea ng-model="$ctrl.description" name="description" rows="3" cols="100%" class="form-control required" required="" placeholder="Brief description (Upto 50 words max)" maxlength="50"></textarea>
+            <textarea ng-model="$ctrl.description" name="description" rows="3" cols="100%" class="form-control required" required="" placeholder="Brief description"></textarea>
             <p class="help-block" ng-show="$ctrl.addCenter.description.$error.required">Required</p>
           </div>
         </div>
