added placeholder function

--- a/app/home/featuredTreatmentCenter/view.html
+++ b/app/home/featuredTreatmentCenter/view.html
@@ -5,7 +5,7 @@
       <div class="listing_block">
         <div class="block_img">
           <a class="thumbnail" ui-sref="{{ listing.uiSref }}">
-            <img class="" ng-src="{{ listing.listing_image }}">
+            <img class="" id="image-{{listing.id}}" ng-src="{{ listing.listing_image }}">
           </a>
         </div>
         <div class="block_content">
