--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -227,6 +227,9 @@
         </tbody>
       </table>
     </div>
+    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 small_monthly">
+      <small>* All payments are monthly recurring</small>
+    </div>
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
       <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
       <!-- <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$ctrl.submit()"> -->
