added forgot password

--- a/app/login/view.html
+++ b/app/login/view.html
@@ -16,12 +16,25 @@
             <label>Password
               <em class="em_star">*</em>
             </label>
-            <input class="form-control required" ng-model="$ctrl.password" name="password" autofocus="" type="password" required="true">
+            <input class="form-control required" id="password" ng-model="$ctrl.password" name="password" autofocus="" type="password" required="true">
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 margin-bottom-10">
-          <div class="log_btn_div btms_spaces btn_bottom_gap">
-            <input class="btn adn-btn right" value="Login" type="submit">
+          <div class="col-md-3 col-sm-3 col-xs-12 margin-bottom-10">
+            <input type="checkbox">
+            <span class="login-changes">Remember Me</span>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12 margin-bottom-10">
+            <input type="checkbox" ng-model="$ctrl.show_pass" ng-click="$ctrl.show_password()">
+            <span class="login-changes">Show Password</span>
+          </div>
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 margin-bottom-10">
+          <div class="log_btn_div btms_spaces btn_bottom_gap col-md-3 col-sm-3 col-xs-12 margin-bottom-10">
+            <input class="btn adn-btn" value="Login" type="submit">
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12 margin-top-5">
+            <a href="javascript:void(0)" ng-click="$ctrl.forgot()"> Forgot details </a>
           </div>
           <div id="error_if"></div>
         </div>
