--- a/app/loginHelp/view.html
+++ b/app/loginHelp/view.html
@@ -35,9 +35,9 @@
               </div>
             </p>
           </div>
-          <div class="col-md-12 col-sm-12 col-xs-12 margin-top-15">
+          <!-- <div class="col-md-12 col-sm-12 col-xs-12 margin-top-15">
             <a href="javascript:void(0)">Click here if you don't know Email or Username</a>
-          </div>
+          </div> -->
         </div>
       </form>
       <div id="match_otp_email" class="ng-hide margin-top-15">
