--- a/app/login/view.html
+++ b/app/login/view.html
@@ -34,7 +34,7 @@
             <input class="btn adn-btn" value="Login" type="submit">
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12 margin-top-5">
-            <a href="javascript:void(0)" ng-click="$ctrl.forgot()"> Forgot details </a>
+            <a href="javascript:void(0)" ng-click="$ctrl.forgot()"> Forgot Username/Password </a>
           </div>
           <div id="error_if"></div>
         </div>
