--- a/app/header/view.html
+++ b/app/header/view.html
@@ -37,9 +37,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+
     </div>
     <!--<div class="navbar-collapse collapse to_be_pull_left new_class_for_collaspe ">-->
     <div class="navbar-collapse to_be_pull_left new_class_for_collaspe" ng-class="{collapse: isCollapsed}">
+
+      <!-- <input type="text" name="" ng-model="$ctrl.searchTxt" ng-change="$ctrl.search()" /> {{$ctrl.searchTxt}} {{$ctrl.results}} -->
+      <input type="text" class="form-control" ng-model="$ctrl.searchTxt" ng-change="$ctrl.search()" placeholder="touch me!">
+      <ul class="list-group" ng-if="$ctrl.results">
+        <li class="list-group-item" ng-repeat="result in $ctrl.results"> <a class="comm" ng-click="$ctrl.results=''" ui-sref="treatmentCenterDetail({id: result.slug })">{{result.center_name}}</a></li>
+      </ul>
       <!-- Social Links -->
       <ul class="social_ul">
         <li ng-repeat="socialLink in $ctrl.socialLinks">
