--- a/app/header/view.html
+++ b/app/header/view.html
@@ -43,10 +43,10 @@
     <div class="navbar-collapse to_be_pull_left new_class_for_collaspe" ng-class="{collapse: isCollapsed}">
 
       <!-- <input type="text" name="" ng-model="$ctrl.searchTxt" ng-change="$ctrl.search()" /> {{$ctrl.searchTxt}} {{$ctrl.results}} -->
-      <div class="col-md-6" style="padding-top:10px;">
-        <input type="text" class="form-control pull-left" style="width:90%;" ng-change="$ctrl.search(0)" ng-model="$ctrl.searchTxt" placeholder="Search centers...">
-        <button type="button" class="btn btn-success pull-right" ng-click="$ctrl.search(1)">Go</button>
-        <ul class="list-group" ng-if="$ctrl.results" style="overflow-y: scroll;width:100%;clear:both;max-height: 197px;">
+      <div class="col-md-9" style="padding-top:10px;">
+        <input type="text" class="form-control pull-left" style="width:86%;" ng-change="$ctrl.search(0)" ng-model="$ctrl.searchTxt" placeholder="Search Centers...">
+        <button type="button" class="btn btn-success" style="margin-left:10px;" ng-click="$ctrl.search(1)">Search</button>
+        <ul class="list-group" ng-if="$ctrl.results" style="overflow-y: scroll;width:100%;clear:both;max-height: 207px;">
           <li class="list-group-item" ng-repeat="result in $ctrl.results"> <a class="comm" ng-click="$ctrl.results=''" ui-sref="treatmentCenterDetail({id: result.slug })">{{result.center_name}}</a></li>
         </ul>
       </div>
