--- a/app/header/view.html
+++ b/app/header/view.html
@@ -43,7 +43,7 @@
     <div class="navbar-collapse to_be_pull_left new_class_for_collaspe" ng-class="{collapse: isCollapsed}">
 
       <!-- <input type="text" name="" ng-model="$ctrl.searchTxt" ng-change="$ctrl.search()" /> {{$ctrl.searchTxt}} {{$ctrl.results}} -->
-      <div class="col-md-9" style="padding-top:10px;">
+      <div class="col-md-9" style="padding-top:10px;display:none;">
         <input type="text" class="form-control pull-left" style="width:86%;" ng-change="$ctrl.search(0)" ng-model="$ctrl.searchTxt" placeholder="Search Centers...">
         <button type="button" class="btn btn-success" style="margin-left:10px;" ng-click="$ctrl.search(1)">Search</button>
         <ul class="list-group" ng-if="$ctrl.results" style="overflow-y: scroll;width:100%;clear:both;max-height: 207px;">
