--- a/app/header/view.html
+++ b/app/header/view.html
@@ -43,13 +43,6 @@
     <div class="navbar-collapse to_be_pull_left new_class_for_collaspe" ng-class="{collapse: isCollapsed}">
 
       <!-- <input type="text" name="" ng-model="$ctrl.searchTxt" ng-change="$ctrl.search()" /> {{$ctrl.searchTxt}} {{$ctrl.results}} -->
-      <div class="col-md-9" style="padding-top:10px;display:none;">
-        <input type="text" class="form-control pull-left" style="width:86%;" ng-change="$ctrl.search(0)" ng-model="$ctrl.searchTxt" placeholder="Search Centers...">
-        <button type="button" class="btn btn-success" style="margin-left:10px;" ng-click="$ctrl.search(1)">Search</button>
-        <ul class="list-group" ng-if="$ctrl.results" style="overflow-y: scroll;width:100%;clear:both;max-height: 207px;">
-          <li class="list-group-item" ng-repeat="result in $ctrl.results"> <a class="comm" ng-click="$ctrl.results=''" ui-sref="treatmentCenterDetail({id: result.slug })">{{result.center_name}}</a></li>
-        </ul>
-      </div>
       <!-- Social Links -->
       <ul class="social_ul">
         <li ng-repeat="socialLink in $ctrl.socialLinks">
@@ -67,6 +60,13 @@
           <li ng-if="$root.login!=1" ng-repeat="link in $ctrl.internalLinksNoAuth" ng-model="$root.login">
             <a class="comm" ui-sref="{{ link.uiSref }}">{{ link.name }}</a>
           </li>
+        </ul>
+      </div>
+      <div class="col-md-9" style="margin-top:-10px;margin-bottom: 16px;">
+        <input type="text" class="form-control pull-left" style="width:88%;" ng-change="$ctrl.search(0)" ng-model="$ctrl.searchTxt" placeholder="Search Centers...">
+        <button type="button" class="btn btn-success" style="margin-left:-9%;" ng-click="$ctrl.search(1)">Search</button>
+        <ul class="list-group search-results" ng-if="$ctrl.results">
+          <li class="list-group-item" ng-repeat="result in $ctrl.results"> <a class="comm" ng-click="$ctrl.results=''" ui-sref="treatmentCenterDetail({id: result.slug })">{{result.center_name}}</a></li>
         </ul>
       </div>
     </div>
