--- a/app/index.html
+++ b/app/index.html
@@ -140,47 +140,16 @@
 
 
     <!-- Start of Invoca Code -->
-    <script data-cfasync="false" type="text/javascript" src="//solutions.invocacdn.com/js/pnapi_integration-latest.min.js"></script>
-    <script data-cfasync="false" type="text/javascript">
-      function getClientId() {
-        if (typeof ga !== 'undefined' && typeof ga.getAll === 'function') {
-
-          var clientId = ga.getAll()[0].get('clientId');
-          return clientId;
-        } else {
-          return false;
-        }
-      }
-
-      function getExistingClientId() {
-        return Invoca.Tools.readInvocaData('g_clid', getClientId());
-      }
-
-      function getHubspotUtk() {
-        return Invoca.Tools.readInvocaData('hubspotutk', Invoca.Tools.readCookie('hubspotutk'));
-      }
-
-      function cookieParams() {
-        var clientId = getExistingClientId();
-        var hubspotUtk = getHubspotUtk();
-        return (clientId && hubspotUtk) ? [clientId, hubspotUtk] : false;
-      }
-      Invoca.Tools.waitFor(cookieParams, function (params) {
-        var invocaGclid = params[0] || getExistingClientId() || 'no_g_clid';
-        var invocaUtk = params[1] || getHubspotUtk() || 'no_utk';
-
-        var invocaParams = {
-          g_clid: invocaGclid,
-          hubspotutk: invocaUtk,
-          referrer: Invoca.Tools.readInvocaData("referrer", document.referrer)
-        };
-        Invoca.PNAPI.integration({
-          networkId: 1282,
-          numberToReplace: "949-444-9123",
-          defaultCampaignId: "237329",
-          poolParams: invocaParams
-        });
-      }, [null, null], 1000);
+    <script>
+      (function (i, n, v, o, c, a) {
+        i.InvocaTagId = o;
+        var s = n.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = ('https:' === n.location.protocol ? 'https://' : 'http://') + v;
+        var fs = n.getElementsByTagName('script')[0];
+        fs.parentNode.insertBefore(s, fs);
+      })(window, document, 'solutions.invocacdn.com/js/pnapi_integration-latest.min.js', '1282/3910429119');
     </script>
     <!-- End of Invoca Code -->
   </body>
