--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -41,7 +41,7 @@
       </div>
       <!-- Layout links -->
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12" ng-if="$ctrl.entry.layout_links.length>0">
-        <section-heading>Additional Links</section-heading>
+        <section-heading>Additional near by centers links</section-heading>
         <!-- <p>{{ $ctrl.entry.content_2 }}</p> -->
         <div>
           <ul>
