--- a/app/sponsorHome/sponsorListingBox/view.html
+++ b/app/sponsorHome/sponsorListingBox/view.html
@@ -41,7 +41,7 @@
       </div>
       <!-- Layout links -->
       <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12" ng-if="$ctrl.entry.layout_links.length>0">
-        <section-heading>Additional near by centers links</section-heading>
+        <section-heading>{{ $ctrl.entry.heading_3 }}</section-heading>
         <!-- <p>{{ $ctrl.entry.content_2 }}</p> -->
         <div>
           <ul>
@@ -55,6 +55,10 @@
                 {{lists.name}}
               </a>
               <a href="/#/cities/{{lists.name|createSlug}}" class="ng-binding" ng-if="lists.type==='city'">
+                <span class="glyphicon"></span>
+                {{lists.name}}
+              </a>
+              <a href="/#/state/{{lists.name|createSlug}}-rehab-centers" class="ng-binding" ng-if="lists.type==='state'">
                 <span class="glyphicon"></span>
                 {{lists.name}}
               </a>
