--- a/app/signUp/welcomeSignup/view.html
+++ b/app/signUp/welcomeSignup/view.html
@@ -1,8 +1,8 @@
-<div class="container progress-content" ng-controller="signUpCtrl as $ctrl">
+<div class="container progress-content">
 <div class="progressbar">
 <div class="col-md-6 col-md-offset-6">
   <div class="progress progress-grediant">
-    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
     aria-valuemin="0" aria-valuemax="100" style="width:0%">
       <span class="stick-me">0%</span>
     </div>
@@ -28,7 +28,8 @@
           the people in need to reach out to you.
           So go ahead and follow these simple
           steps:</p>
-          <p><a href="javascript:void(0)" ng-click="$ctrl.test();">Sign-up</a></p>
+          <p><a href="javascript:void(0)" ng-click="$ctrl.signUp();">Sign-up</a></p>
       </div>
     </div>
   </div>
+</div>
