--- a/app/signUp/updateMembership/view.html
+++ b/app/signUp/updateMembership/view.html
@@ -54,13 +54,18 @@
                   <td></td>
                   <td><i class="fa fa-check"></i></td>
                 </tr>
+                <tr class="no-border2">
+                  <td></td>
+                  <td>Select</td>
+                  <td>Select</td>
+                </tr>
               </tbody>
             </table>
+
           </div>
-          <ul class="stick-next-uo list-inline">
-            <li><p><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">Back</a></p></li>
-            <li><p><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">Skip</a></p></li>
-            <li><p><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">Done</a></p></li>
+          <ul class="list-inline um-np">
+            <li><a href="#">Back</a></li>
+            <li><a href="javascript:void(0)" ng-click="$ctrl.sponser()">Continue without upgrade</a></li>
           </ul>
     </div>
   </div>
