new pages created

--- a/app/signUp/publishAds2/view.html
+++ b/app/signUp/publishAds2/view.html
@@ -74,6 +74,6 @@
 
     </div>
     <p class="stick-next-left font-normal bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Back</a></p>
-    <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">Next</a></p>
+    <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.updateAds()">Next</a></p>
   </div>
 </div>
