new pages created

--- a/app/signUp/UserCreate/view.html
+++ b/app/signUp/UserCreate/view.html
@@ -36,7 +36,7 @@
                 <input type="text" class="form-control" id="cname" placeholder="Company Name" ng-model="$ctrl.company_name">
               </div>
               <div class="form-group">
-                <input type="number" class="form-control" id="phone" placeholder="User Phone no" ng-model="$ctrl.phone_no">
+                <input type="number" class="form-control" id="phone" placeholder="User Phone no" ng-model="$ctrl.phone_num">
               </div>
               <div class="form-group">
                 <input type="email" class="form-control" id="email" placeholder="User Email ID" ng-model="$ctrl.email">
