--- a/app/signUp/updateAds/view.html
+++ b/app/signUp/updateAds/view.html
@@ -12,7 +12,7 @@
 </div>
 </div>
   <div class="clearfix"></div>
-  <div class="progress-content-one">
+  <div class="progress-content-one update-ads">
 
       <div class="col-md-6">
         <div class="progress-img-wrap p-60">
@@ -23,17 +23,17 @@
       <div class="col-md-6">
         <div class="psignup-form">
           <form class="psignup-form">
-            <p class="c-blue">Publish Ads</p>
+            <p class="c-blue">Update Ads</p>
             <div class="form-group clear-me">
               <label class="label-uo">Header:</label>
               <div class="pull-right">
-                <div class="pull-left choose-file"><span>Upload <i class="fa fa-arrow-up"></i></span>
-                <input type="file" class="file"></div>
+                <ul class="list-inline">
+                  <li><a href="javascriprt:void(0)" class="btn btn-default btn-custom"> Edit <i class="fa fa-pencil"></i></a></li>
+                  <li><a href="javascriprt:void(0)" class="btn btn-default btn-custom"> Delete <i class="fa fa-trash"></i></a></li>
+                </ul>
               </div>
-              <div class="ads-block">
-                  <p>Cost:</p>
-                  <p>Size:</p>
-                  <p>Location:</p>
+              <div class="w-full">
+                <img src="themes/addiction/images/png/demo-banner.png" class="demo-banner">
               </div>
             </div>
             <div class="form-group clear-me">
@@ -49,11 +49,7 @@
                   <p>Location:</p>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="ads-block pull-right">
-                <p>Jpg, png, gif format upto 10 mb size</p>
-              </div>
-              </div>
+              <div class="col-md-6"></div>
             </div>
             <div class="form-group clear-me">
               <label class="label-uo">Footer:</label>
@@ -67,13 +63,12 @@
                   <p>Location:</p>
               </div>
             </div>
-
           </form>
         </div>
 
 
     </div>
-    <p class="stick-next-left font-normal bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Back</a></p>
-    <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="$ctrl.userCreate()">Next</a></p>
+    <p class="stick-next-left font-normal bottom-5"><a href="javascript:void(0)" ng-click="">Back</a></p>
+    <p class="stick-next-right bottom-5"><a href="javascript:void(0)" ng-click="">Done</a></p>
   </div>
 </div>
