--- a/app/signUp/UserCreate/view.html
+++ b/app/signUp/UserCreate/view.html
@@ -48,12 +48,14 @@
               <div class="form-group">
                 <input type="email" class="form-control" id="email" name="email" placeholder="User Email ID" ng-keypress="$ctrl.userCreateFormInit.email=0" ng-model="$ctrl.email" email="true" required="true" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i">
                 <span ng-show="$ctrl.userCreateForm.email.$invalid && ($ctrl.userCreateFormInit.email===0)" class="help-block">Required and please enter valid email</span>
+                <span ng-show="$ctrl.userCreateForm.email.$invalid===false && ($ctrl.userCreateFormInit.email===0) && $ctrl.emailErrorTxt!=''" ng-init="$ctrl.emailErrorTxt=''" class="help-block">{{$ctrl.emailErrorTxt}}</span>
+
               </div>
               <div class="form-group">
                 <input type="{{showpassword ? 'text' : 'password'}}" name="password" class="form-control" id="pwd" placeholder="Password" required ng-model="$ctrl.password" ng-keypress="$ctrl.userCreateFormInit.password=0">
                 <span class="fix-right" ><i class="fa fa-eye fa-2x" ng-model="showpassword" ></i></span>
-                <span ng-show="$ctrl.userCreateForm.password.$error.required && ($ctrl.userCreateFormInit.password===0)" ng-init="$ctrl.pwdRequiredTxt='Required'" class="help-block">{{$ctrl.pwdRequiredTxt}}</span>
-                <span ng-show="($ctrl.userCreateFormInit.password===0)&& $ctrl.pwdRequiredTxt!='Required'"  class="help-block">{{$ctrl.pwdRequiredTxt}}</span>
+                <span ng-show="$ctrl.userCreateForm.password.$error.required && ($ctrl.userCreateFormInit.password===0)" ng-init="$ctrl.pwdRequiredTxt='Required'" class="help-block">Required</span>
+                <span ng-show="($ctrl.userCreateFormInit.password===0)&& $ctrl.pwdRequiredTxt!='Required' && $ctrl.userCreateForm.password.$error.required!=true"  class="help-block">{{$ctrl.pwdRequiredTxt}}</span>
 
 
                 <!--  -->
