updated upto publish ads

--- a/app/signUp/updateMembership/view.html
+++ b/app/signUp/updateMembership/view.html
@@ -24,7 +24,6 @@
           <div class="para-optional">
             <p class="lead">Update membership:</p>
             <p>There is also an option to upgrade membership. Check the table below for the benefits:</p>
-
           </div>
           <div class="table-responsive table-pro">
             <table class="table table-bordered">
@@ -56,8 +55,8 @@
                 </tr>
                 <tr class="no-border2">
                   <td></td>
-                  <td>Select</td>
-                  <td>Select</td>
+                  <td><a href="javascript:void(0);" ng-click="$ctrl.sponsored();">Select</a></td>
+                  <td><a href="javascript:void(0);" ng-click="$ctrl.featured();">Select</a></td>
                 </tr>
               </tbody>
             </table>
