--- a/app/signUp/publishAds/view.html
+++ b/app/signUp/publishAds/view.html
@@ -22,39 +22,54 @@
       </div>
       <div class="col-md-6">
         <div class="psignup-form">
-          <form class="psignup-form">
+          <form class="psignup-form" name="$ctrl.publishAdsForm">
             <p class="c-blue">Publish Ads</p>
             <div class="form-group clear-me">
               <label class="label-uo">Header:</label>
               <div class="pull-right">
                 <div class="pull-left choose-file"><span>Upload <i class="fa fa-arrow-up"></i></span>
-                <input type="file" class="file"></div>
+                <!-- <input type="file" class="file"> -->
+                  <input name="headerImage" id="headerImage" class="file" type="file" file-model="$ctrl.headerImage"  accept="image/*">
+              </div>
               </div>
               <div class="ads-block">
                   <p>Cost:</p>
-                  <p>Size:</p>
+                  <p>Size: 544 PX x 93PX</p>
+                  <p>Website: <input type="text" name="weblinkHeader" ng-model="$ctrl.weblinkHeader" ng-init="$ctrl.adsFormInit.weblinkHeader=1" ng-keypress="$ctrl.adsFormInit.weblinkHeader = 0" required/></p>
+                  <span ng-show="$ctrl.publishAdsForm.weblinkHeader.$error.required && ($ctrl.adsFormInit.weblinkHeader===0)" class="help-block">Required</span>
+
               </div>
             </div>
             <div class="form-group clear-me">
               <label class="label-uo">Side:</label>
               <div class="pull-right">
                 <div class="pull-left choose-file"><span>Upload <i class="fa fa-arrow-up"></i></span>
-                <input type="file" class="file"></div>
+                <!-- <input type="file" class="file"> -->
+                <input name="sideImage" id="sideImage" class="file" type="file" file-model="$ctrl.sideImage"  accept="image/*">
+              </div>
               </div>
               <div class="ads-block">
                   <p>Cost:</p>
-                  <p>Size:</p>
+                    <p>Size: 248PX x 145PX</p>
+                  <p>Website: <input type="text" name="weblinkSidebar" ng-model="$ctrl.weblinkSidebar" ng-init="$ctrl.adsFormInit.weblinkSidebar=1" ng-keypress="$ctrl.adsFormInit.weblinkSidebar = 0" required/></p>
+                    <span ng-show="$ctrl.publishAdsForm.weblinkSidebar.$error.required && ($ctrl.adsFormInit.weblinkSidebar===0)" class="help-block">Required</span>
+
               </div>
             </div>
             <div class="form-group clear-me">
               <label class="label-uo">Footer:</label>
               <div class="pull-right">
                 <div class="pull-left choose-file"><span>Upload <i class="fa fa-arrow-up"></i></span>
-                <input type="file" class="file"></div>
+                <!-- <input type="file" class="file"> -->
+                  <input name="footerImage" id="footerImage" class="file" type="file" file-model="$ctrl.footerImage"  accept="image/*">
+              </div>
               </div>
               <div class="ads-block">
                   <p>Cost:</p>
-                  <p>Size:</p>
+                  <p>Size: 646PX x 111PX</p>
+                  <p>Website: <input type="text" name="weblinkFooter" ng-model="$ctrl.weblinkFooter"  ng-init="$ctrl.adsFormInit.weblinkFooter=1" ng-keypress="$ctrl.adsFormInit.weblinkFooter = 0" required/></p>
+                  <span ng-show="$ctrl.publishAdsForm.weblinkFooter.$error.required && ($ctrl.adsFormInit.weblinkFooter===0)" class="help-block">Required</span>
+
               </div>
             </div>
 
@@ -64,6 +79,7 @@
 
     </div>
     <p class="stick-next-left font-normal"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Back</a></p>
-    <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads2()">Next</a></p>
+    <!-- <p class="stick-next-right"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads2()">Next</a></p> -->
+    <p class="stick-next-right"><button ng-click="$ctrl.publish_ads2()">Next</button></p>
   </div>
 </div>
